--- a/index.html
+++ b/index.html
@@ -117,8 +117,9 @@
               </div>
             </div>
           </div>
-  
-
+  <div class="py-5">
+    <h4> Checking Git </h4>
+  </div>
   
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
