--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <img class="card-img-top" src="curve.jpg" alt="Card image cap">
     <div class="card-body d-flex flex-column">
       <h5 class="card-title">Coronavirus: Epidemic Curve Not Flattens but Testing Capacity Reached Its Upper Limit</h5>
-      <p class="card-text">According to the head of the action group of the infection monitoring team of the Ministry of Innovation and Technology, the epidemic curve would go even higher, but it can’t, because the country has reached the limit of its laboratory testing capacity. Thus, less serious cases can no longer be identified. The consequences of this are not only that the number of daily new infections are not increasing significantly but also that forecasting the epidemic is becoming more and more difficult from the statistics, even though it spreads quite predictably. </p>
+      <p class="card-text">According to the head of the action group of the infection monitoring team of the Ministry of Innovation and Technology, the epidemic curve would go even higher, but it can’t, because the country has reached the limit of its laboratory testing capacity.</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       <a href="https://hungarytoday.hu/coronavirus-hungary-epidemic-curve-testing-capacity-upper-limit/" class="align-self-end btn btn-primary float-right" style="margin-top: auto;">Read more</a>
     </div>
