--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 
   <div class="card p-4" >
     <div class="row p-4">
-      <script src="main.js"></script>
+      <script src="Chart.js"></script>
       <div class="col-lg-6 col-xl-3">
         <div class="card">
           <div class="card-body">
             <div  class="row align-items-center">
               <div class="row-6">
-                <h5 class="font-weight-normal mt-0 text-truncate" class="align-right  style="color:yellow"><b>Active</b></h5>
+                <h5 class="font-weight-normal mt-0 text-truncate" class="align-right"  style="color:black"><b>Active</b></h5>
                 <h3 class="my-3 py-1" id="Active"></h3>
               </div>
             </div>
